Doing some checkstyle.